--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddMealActivity"></activity>
+        <activity android:name=".ReviewMealActivity"></activity>
+        <activity android:name=".AddMealActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".InitActivity" />
         <activity android:name=".OnBoardActivity" />
